--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 </head>
 <body>
 <h1>Kennedy is the newest Kubernetes Ninja</h1>
+    <br>
+    <p> This is a life changer. The key i have been looking for and working towards"
 </body>
 </html>
