--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h2> Target : $ 300,000 Annual </h2>
     
     <h1> So help me God. Amen! </h1>
-    <img src="images/me.jpg" alt="Ken.wiz@wakanda.org" />
+    <img src="images/animals.jpg" alt="Ken.wiz@wakanda.org" />
 
            
 </body>
